# cell_type_constellations

./: .gitignore  README.md  installation.md  pyproject.toml  run_visualization.sh  troubleshooting.md
data/: .gitignore
examples/: serialization_cmg.py  serialization_example.py  serialization_gpe.py
src/cell_type_constellations/app/: page_utils.py
src/cell_type_constellations/cells/: cell_set.py  data_cache.py  mixture_matrix.py  taxonomy_filter.py  tree_utils.py  utils.py
src/cell_type_constellations/cli/: create_data_cache.py  create_data_cache_from_h5ad.py  create_data_cache_from_h5ad_and_csv.py  serialize_svg_data.py  serialize_svg_data_from_h5ad.py  visualization_app.py  write_out_graph.py
src/cell_type_constellations/hulls/: classes.py  creation.py  leaf_splitter.py  leaf_utils.py  merger_utils.py
src/cell_type_constellations/mixture_matrix/: mixture_matrix_generator.py
src/cell_type_constellations/rendering/: continuous_color_map.py  hull_rendering.py  rendering_utils.py  utils.py
src/cell_type_constellations/serialization/: serialization.py
src/cell_type_constellations/svg/: centroid.py  connection.py  fov.py  hull.py  hull_utils.py  rendering_utils.py  serialize_svg_data.py  utils.py
src/cell_type_constellations/taxonomy/: taxonomy_tree.py  utils.py
src/cell_type_constellations/utils/: connection_utils.py  coord_utils.py  data.py  geometry.py  geometry_utils.py  multiprocessing_utils.py
src/cell_type_constellations/visual_elements/: centroid.py  connection.py  fov.py
tests/svg/: test_hull_utils.py
tests/utils/: test_geometry.py
(+8 files in other folders)
